# elt-dagster-meltano

./: .pylintrc  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: release.yaml  test.yaml
tests/: test_execute_shell_command.py
