[tool.poetry]
name = "dagster-meltano"
version = "1.6.0"
description = "A dagster plugin that allows you to run your Meltano project inside Dagster."
authors = ["Quantile Development"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "dagster_meltano" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
dagster = ">=1.10,<2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
pytest = "^7.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"